# triage-ai-rppg

./: .gitignore  Loadtemporal_data_test.py  README.md  VIPL_fold1_test1.txt  extract_heart_rate.py  inference_OneSample_VIPL_PhysFormer.py  live_rppg.py  main.py  minimal_api.py  preprocess_video.py  pyproject.toml  requirements.txt  rppg_analyzer.py  simple_rppg.py  test_frame_generation.py  test_pipeline_debug.py  video_to_frames.py
Inference_Physformer_TDC07_sharp2_hid96_head4_layer12_VIPL/: Inference_Physformer_TDC07_sharp2_hid96_head4_layer12_VIPL.mat
heart_rate_analysis/: heart_rate_analysis_summary.csv
physformer_data/: VIPL_fold1_test1.txt
results/: VIPL_fold1_test1.txt  physformer_output.txt
