[project]
name = "triage-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.1.4",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "h5py==2.10.0",
    "yacs==0.1.8",
    "scipy==1.5.2",
    "pandas==1.1.5",
    "scikit-image==0.17.2",
    "numpy==1.22.0",
    "matplotlib==3.1.2",
    "opencv-python==4.5.2.54",
    "PyYAML==6.0",
    "scikit-learn==1.0.2",
    "tensorboardX==2.4.1",
    "tqdm==4.64.0",
    "mat73==0.59",
    "timm==1.0.11",
    "causal-conv1d==1.0.0",
    "protobuf==3.20.3",
    "neurokit2==0.2.10",
    "thop==0.1.1.post2209072238",
    "mamba-ssm==2.2.2",
]
